Fix form button spacing

--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -23,7 +23,6 @@
     cursor: pointer;
     font-size: 1.8rem;
     height: 4.4rem;
-    width: 9.4rem;
     transition: all 0.2s ease;
     &:hover {
       background-color: $color-red;
